--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="home section" id="home">
             <div class="home__container container grid">
                 <div class="home__content">
-                    <img src="images/home-jbl1.png" alt="image" class="home__img">
+                    <img src="home-jbl1.png" alt="image" class="home__img">
 
                     <h1 class="home__title">
                         <span>J</span>
@@ -75,7 +75,7 @@
                     </h1>
 
                     <div class="home__tooltip">
-                        <img src="images/tooltip-right.svg" alt="image" class="home__tooltip-img">
+                        <img src="tooltip-right.svg" alt="image" class="home__tooltip-img">
                         <span class="home__tooltip-text">$150</span>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                         Know More <i class="ri-information-fill"></i>
                     </a>
                 </div>
-                <img src="images/jbl-about.png" alt="image" class="about__img">
+                <img src="jbl-about.png" alt="image" class="about__img">
             </div>
         </section>
 
@@ -136,22 +136,22 @@
                 <div class="favorite__swiper swiper">
                     <div class="swiper-wrapper">
                         <article class="favorite__article swiper-slide">
-                            <img src="images/jbl-black.png" alt="image" class="favorite__img">
+                            <img src="jbl-black.png" alt="image" class="favorite__img">
                             <span class="favorite__model">Black Model</span>
                         </article>
 
                          <article class="favorite__article swiper-slide">
-                            <img src="images/jbl-white.png" alt="image" class="favorite__img">
+                            <img src="jbl-white.png" alt="image" class="favorite__img">
                             <span class="favorite__model">White Model</span>
                         </article>
 
                          <article class="favorite__article swiper-slide">
-                            <img src="images/jbl-gold.png" alt="image" class="favorite__img">
+                            <img src="jbl-gold.png" alt="image" class="favorite__img">
                             <span class="favorite__model">Gold Model</span>
                         </article>
 
                          <article class="favorite__article swiper-slide">
-                            <img src="images/jbl-blue.png" alt="image" class="favorite__img">
+                            <img src="jbl-blue.png" alt="image" class="favorite__img">
                             <span class="favorite__model">Blue Model</span>
                         </article>
                     </div>
@@ -168,31 +168,31 @@
 
             <div class="model__container container grid">
                 <div class="model__content">
-                    <img src="images/jbl1.png" alt="image" class="model__img">
+                    <img src="jbl1.png" alt="image" class="model__img">
 
                     <div class="model__tooltip model__tooltip-1">
-                        <img src="images/tooltip-right.svg" alt="" class="model__Tooltip-img">
+                        <img src="tooltip-right.svg" alt="" class="model__Tooltip-img">
                         <span class="model__tooltip-text">
                             Best Comfort
                         </span>
                     </div>
 
                     <div class="model__tooltip model__tooltip-2">
-                        <img src="images/tooltip-right.svg" alt="" class="model__Tooltip-img">
+                        <img src="tooltip-right.svg" alt="" class="model__Tooltip-img">
                         <span class="model__tooltip-text">
                             Easy Adjustment
                         </span>
                     </div>
 
                     <div class="model__tooltip model__tooltip-3">
-                        <img src="images/tooltip-right.svg" alt="" class="model__Tooltip-img">
+                        <img src="tooltip-right.svg" alt="" class="model__Tooltip-img">
                         <span class="model__tooltip-text">
                             Fast Charge
                         </span>
                     </div>
 
                     <div class="model__tooltip model__tooltip-4">
-                        <img src="images/tooltip-right.svg" alt="" class="model__Tooltip-img">
+                        <img src="tooltip-right.svg" alt="" class="model__Tooltip-img">
                         <span class="model__tooltip-text">
                             Custom Audio
                         </span>
@@ -212,10 +212,10 @@
                 Sponsors
             </h2>
             <div class="sponsor__container container grid">
-                <img src="images/apple-logo.png" alt="image" class="sponsor__img">
-                <img src="images/spotify-logo-cropped.png" alt="image" class="sponsor__img">
-                <img src="images/amazon-logo-croped.png" alt="image" class="sponsor__img">
-                <img src="images/youtube-logo.png" alt="image" class="sponsor__img">
+                <img src="apple-logo.png" alt="image" class="sponsor__img">
+                <img src="spotify-logo-cropped.png" alt="image" class="sponsor__img">
+                <img src="amazon-logo-croped.png" alt="image" class="sponsor__img">
+                <img src="youtube-logo.png" alt="image" class="sponsor__img">
             </div>
         </section>
         
